# envmesh

./: .gitignore  CLAUDE.md  CLI_USAGE.md  HANDOFF.md  QUICKSTART_WSL.md  README.md  STATUS.md  install.sh  uninstall.sh
.github/workflows/: README.md  ci.yml  release.yml
config-examples/: README.md  client-only.toml  client.toml  cloud-server.toml  lan-only.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: 32x32.ppm  icon.icns
src-tauri/src/: api.rs  cli.rs  client.rs  config.rs  crypto.rs  election.rs  health.rs  lib.rs  main.rs  node.rs  p2p.rs  server.rs  state.rs  storage.rs
ui/: app.js  index.html  styles.css
