[package]
name = "envmesh"
version = "0.1.0"
edition = "2021"
authors = ["Jordan Burke"]
description = "Cross-platform client-server environment variable sync with LAN failover"
license = "MIT"

[lib]
name = "envmesh"
path = "src/lib.rs"

[[bin]]
name = "envmesh"
path = "src/main.rs"

[[bin]]
name = "envmesh-daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "envmesh-cli"
path = "src/bin/cli.rs"

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

# WebSocket client-server networking
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Storage and encryption
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"
argon2 = "0.5"

# CRDT
automerge = "0.5"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
